# django-optimistic-admin-pg

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
src/optimisticadmin/: expressions.py  mixins.py
tests/: settings.py  test_mixins.py
