[metadata]
name = django-optimistic-admin-pg
version = 1.0.0
description = django-optimistic-admin-pg providing mixins for implementing optimistic concurrency in Django using PostgreSQL
long_description = file: README.md
long_description_content_type = text/markdown
author = Riccardo Magliocchetti
author_email = riccardo.magliocchetti@gmail.com
maintainer = Djungle Studio
maintainer_email = tech@djungle.io
url = https://github.com/djungle-io/django-optimistic-admin-pg
license = MIT License
keywords =
    django
    admin
    concurrency
    postgresql
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
license_files = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires = Django>=3.2
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
source =
    optimisticadmin
    tests
omit = 
    tests/manage.py

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 105
extend-ignore = E203
